Fix codesmells